# agent-skill-adapter

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yaml
backend/: .env.example  Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/controllers/: evaluation.py  skills.py  training.py
backend/src/models/: config.py  schemas.py
backend/src/services/: __init__.py  data_generator.py  evaluator.py  inference.py  queue.py  skill_loader.py  trainer.py
backend/tests/integration/: test_api.py  test_inference_integration.py
backend/tests/unit/: test_data_generator.py  test_evaluator.py  test_health.py  test_inference.py  test_schemas.py  test_skill_loader.py
charts/api/: Chart.yaml  values.yaml
charts/api/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
charts/frontend/: Chart.yaml  values.yaml
charts/frontend/templates/: _helpers.tpl  (+3 more)
charts/ingress/: Chart.yaml  values.yaml
charts/redis/: Chart.yaml  values.yaml
charts/skill-adapter/: Chart.yaml  values.yaml
charts/tgi/: Chart.yaml  values.yaml
charts/training-job/: Chart.yaml  values.yaml
docs/: 01_dgx_spark_setup.md  02_model_download.md  03_model_serving.md  04_training_guide.md  05_docker_deployment.md  06_kubernetes_setup.md
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: main.tsx  types.ts
research/: 01_rlvf_overview.md  02_skill_format.md  03_training_architecture.md  04_evaluation_framework.md  05_deployment_strategy.md
scripts/: build.sh
(+22 files in other folders)
